--- a/jianli.html
+++ b/jianli.html
@@ -120,7 +120,7 @@
                                 <li>深刻理解Web标准</li>
                                 <li>熟练运用HTML标签</li>
                                 <li>熟悉JSON及XHTML标记语言</li>
-                                <li>掌握HTML5如SVG，localstorage新特性</li>
+                                <li>掌握HTML5如canvas，localstorage新特性</li>
                             </ul>
                         </div>
                     </div>
