--- a/jianli.html
+++ b/jianli.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<!-- <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"/> -->
+	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"/>
 	<title>前端工程师简历</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -120,7 +120,7 @@
                                 <li>深刻理解Web标准</li>
                                 <li>熟练运用HTML标签</li>
                                 <li>熟悉JSON及XHTML标记语言</li>
-                                <li>掌握HTML5如canvas，localstorage新特性</li>
+                                <li>掌握HTML5如SVG，localstorage新特性</li>
                             </ul>
                         </div>
                     </div>
@@ -151,6 +151,8 @@
                         </div>
                     </div>
                 </div>
+                <div class="flag" id="flag1"></div>
+                <div class="flag" id = "flag2"></div>
             </div>
         </div>
 	</div>
@@ -170,7 +172,7 @@
                                         <dl>
                                             <dt>自我简介</dt>
                                             <dd class="exp_list_time">2012年9月~2016年6月</dd>
-                                            <dd>本科一批统招院校工学学位。</dd>
+                                            <dd>本科一批统招院校学士学位。</dd>
                                             <dd>对前端抱有极大的兴趣爱好，14年开始自学之路</dd>
                                             <dd>熟练掌握HTML/CSS、JavaScript、jQuery等编程语言</dd>
                                             <dd>成绩优秀曾获取<a href="#" class="md-trigger" data-modal="modal-1">院校级奖</a>多项</dd>
